--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Bangers|Bebas+Neue&display=swap" rel="stylesheet">
+    <title>Seif El-Din Sweilam | Portofolio</title>
 </head>
 
 <body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
+    <div class='banner'>
+        <div class="title">
+            <h1>Seif El-Din Sweilam</h1>
+            <p>
+                "An enthusiastic developer who aims to make something which will be refered at in the near future"
+            </p>
+        </div>
+        <img src="images/menu.png" alt="View Menu" class="button">
+        <div class="bar">
+            <a href="https://github.com/saifsweelam" class="bar_item">Repositories</a>
+            <a href="https://www.youtube.com/channel/UCbic2g2KHDiKFdCIWso7AaA" class="bar_item">Logic Crackers</a>
+            <a href="https://logicrackers.blogspot.com/" class="bar_item">Blog</a>
+        </div>
+    </div>
+    <div class="contents">
+    </div>
 </body>
-</html>
