--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Bangers|Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="images/icon.png" rel="icon" type="image/x-icon">
     <title>Seif El-Din Sweilam | Portofolio</title>
 </head>
 
