--- a/index.html
+++ b/index.html
@@ -2,54 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <!--meta-->
+    <meta charset="UTF-8">
+    <meta name="description"
+        content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Bangers|Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="images/icon.png" rel="icon" type="image/x-icon">
-    <title>Seif El-Din Sweilam | Portofolio</title>
+    <title>Seif El-Din Sweilam</title>
+    <!--jQuery 3.5-->
+    <script src="JS/jquery.min.js"></script>
+    <!--Bootstrap 4-->
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <script src="JS/bootstrap.min.js"></script>
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
-    <div class='banner'>
-        <div class="title">
-            <h1>Seif El-Din Sweilam</h1>
-            <p>
-                "An enthusiastic developer who aims to make something which will be refered at in the near future"
-            </p>
-        </div>
-        <img src="images/menu.png" alt="View Menu" class="button" onclick="myFunction()">
-        <div class="bar">
-            <a href="https://github.com/saifsweelam" class="bar_item" target="_blank">Repositories</a>
-            <a href="https://www.youtube.com/channel/UCbic2g2KHDiKFdCIWso7AaA" class="bar_item" target="_blank">Logic
-                Crackers</a>
-            <a href="https://logicrackers.blogspot.com/" class="bar_item" target="_blank">Blog</a>
-        </div>
-    </div>
-    <div class="contents">
-    </div>
+    <header id="page-header" class="text-white h-100 text-center pt-5">
+    </header>
+    <div id="footage"></div>
 </body>
-<script>
-    function myFunction() {
-        var bar = document.querySelector('.bar')
-        bar.classList.toggle("show");
-    }
-
-    // Close the dropdown menu if the user clicks outside of it
-    window.onclick = function (event) {
-        if (!event.target.matches('.button')) {
-            var dropdowns = document.getElementsByClassName("bar");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-                var openDropdown = dropdowns[i];
-                if (openDropdown.classList.contains('show')) {
-                    openDropdown.classList.remove('show');
-                }
-            }
-        }
-    }
-</script>
 
 </html>
