Add skills section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="description"
         content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#555555">
     <title>Seif El-Din Sweilam</title>
+    <!--Google Font "Cairo"-->
+    <link rel="stylesheet" href="CSS/cairo.css">
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/586ec15b1c.js" crossorigin="anonymous"></script>
     <!--jQuery 3.5-->
     <script src="JS/jquery.min.js"></script>
     <!--Bootstrap 4-->
@@ -15,12 +20,183 @@
     <script src="JS/bootstrap.min.js"></script>
     <!--Custom CSS-->
     <link rel="stylesheet" href="CSS/styles.css">
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
 </head>
 
 <body>
-    <header id="page-header" class="text-white h-100 text-center pt-5">
+
+    <nav class="navbar navbar-expand-lg fixed-top py-3">
+        <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Seif El-Din Sweilam</a>
+            <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars text-white"></i></button>
+
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home
+                            <span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Gallery</a>
+                    </li>
+                    <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a>
+                    </li>
+                    <li class="nav-item"><a href="mailto:saifsweelam@gmail.com"
+                            class="nav-link text-uppercase font-weight-bold">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header id="page-header" class="text-white text-center pt-5">
+        <div class="container">
+            <p class="text-left html-tags">&lt;developer&gt;</p>
+            <h1 class="display-1">Seif El-Din Sweilam</h1>
+            <p class="text-right html-tags">&lt;&#47;developer&gt;</p>
+            <p class="mt-5 h3">A self-paced Full Stack Web Developer.</p>
+            <a href="mailto:saifsweelam@gmail.com" class="btn btn-secondary">Hire Now!</a>
+        </div>
     </header>
+
+    <section id="skills" class="bg-white text-center p-5">
+        <div class="container">
+            <h2 class="h1 m-5">Skills</h2>
+            <h3 class="mt-2 h2">Front-End</h3>
+            <div class="row justify-content-center collapsed" id="frontend-list">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-html5"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>HTML5</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-css3-alt"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>CSS3</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-js-square"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>JavaScript</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-bootstrap"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Bootstrap</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-sass"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Sass</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fas fa-mobile"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Responsive Design</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fas fa-palette"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>UI / UX</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-link" onclick="document.querySelector('#frontend-list').classList.remove('collapsed')">
+                Display All &dArr;
+            </button>
+            <h3 class="mt-2 h2">Back-End</h3>
+            <div class="row justify-content-center collapsed" id="backend-list">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-python"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Python</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-node"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Node.JS</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fas fa-chart-bar"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>SQL & SQLAlchemy</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fas fa-file-alt"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>RESTful APIs</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-node-js"></i></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Express.JS</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fab fa-envira"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>MongoDB</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                    <div class="skill-card col-12 row">
+                        <div class="col-4 display-1"><i class="fas fa-pepper-hot"></i></div>
+                        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+                            <h4>Flask</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-link" onclick="document.querySelector('#backend-list').classList.remove('collapsed')">
+                Display All &dArr;
+            </button>
+        </div>
+    </section>
+
     <div id="footage"></div>
+    <!--Custom scripts-->
+    <script src="JS/navbar.js"></script>
 </body>
 
 </html>
