--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item w-100"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
                     <li class="nav-item w-100"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                    <li class="nav-item w-100"><a href="#" class="nav-link text-uppercase font-weight-bold">Gallery</a></li>
+                    <li class="nav-item w-100"><a href="certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates</a></li>
                     <li class="nav-item w-100 active"><a href="portfolio.html" class="nav-link text-uppercase font-weight-bold">Portfolio<span class="sr-only">(current)</span></a></li>
                     <li class="nav-item w-100"><a href="mailto:saifsweelam@gmail.com" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
                 </ul>
@@ -57,7 +57,7 @@
     <header id="page-header" class="text-white text-center pt-5">
         <div class="container p-5">
             <p class="text-left html-tags">&lt;details&gt;</p>
-            <h1 class="display-1">Portfolio</h1>
+            <h1 class="display-3">Portfolio</h1>
             <p class="text-right html-tags">&lt;&#47;details&gt;</p>
             <p class="mt-5 h3">Discover my projects.</p>
             <a href="mailto:saifsweelam@gmail.com" class="btn btn-secondary">Hire Now!</a>
