Add about section & AOS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#555555">
-    <title>Seif El-Din Sweilam</title>
+    <title>Seif El-Din Sweilam - Full Stack Web Developer</title>
 
     <!--Google Font "Cairo"-->
     <link rel="stylesheet" href="CSS/cairo.css">
@@ -22,6 +22,7 @@
     <!--Bootstrap 4-->
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script src="JS/bootstrap.min.js"></script>
+
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="CSS/styles.css">
@@ -45,7 +46,7 @@
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item w-100 active"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item w-100"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                    <li class="nav-item w-100"><a href="#about" class="nav-link text-uppercase font-weight-bold">About</a></li>
                     <li class="nav-item w-100"><a href="certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates</a></li>
                     <li class="nav-item w-100"><a href="portfolio.html" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
                     <li class="nav-item w-100"><a href="mailto:saifsweelam@gmail.com" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
@@ -69,7 +70,7 @@
             <h2 class="h1 m-5">Skills</h2>
             <h3 class="mt-2 h2">Front-End</h3>
             <div class="row justify-content-center collapsed ml-auto mr-auto" id="frontend-list">
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-html5"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -77,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-css3-alt"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -85,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-js-square"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -93,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-bootstrap"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -101,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-sass"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -109,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fas fa-mobile"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -117,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fas fa-palette"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -131,7 +132,7 @@
             </button>
             <h3 class="mt-2 h2">Back-End</h3>
             <div class="row justify-content-center collapsed ml-auto mr-auto" id="backend-list">
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-python"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -139,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-node"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -147,7 +148,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fas fa-chart-bar"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -155,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fas fa-file-alt"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -163,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-node-js"></i></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -171,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fab fa-envira"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -179,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container">
+                <div class="col-xl-4 col-md-6 mt-2 mb-2 card-container" data-aos="fade-down" data-aos-offset="200">
                     <div class="skill-card col-12 row">
                         <div class="col-4 display-1"><i class="fas fa-pepper-hot"></i></div>
                         <div class="col-8 d-flex flex-column justify-content-center align-items-center">
@@ -197,7 +198,7 @@
     <section id="projects" class="text-center p-5">
         <h2 class="h1">My Projects</h2>
         <div class="mt-5">
-            <div class="row mt-2 mb-2">
+            <div class="row mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-right">
                 <div class="col-md-4 col-sm-3">
                     <div class="project-img" id="misk-img"></div>
                 </div>
@@ -210,7 +211,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mobile-reverse mt-2 mb-2">
+            <div class="row mobile-reverse mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-left">
                 <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
                     <h3 class="left">Get Your Identity</h3>
                     <p>You enter a name and wait for magic to happen. The website sends <code>AJAX</code> requests to multiple sites to get a fake identity for you.</p>
@@ -223,7 +224,7 @@
                     <div class="project-img" id="identity-img"></div>
                 </div>
             </div>
-            <div class="row mt-2 mb-2">
+            <div class="row mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-right">
                 <div class="col-md-4 col-sm-3">
                     <div class="project-img" id="protected-img"></div>
                 </div>
@@ -236,7 +237,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mobile-reverse mt-2 mb-2">
+            <div class="row mobile-reverse mt-2 mb-2" data-aos-offset="200" data-aos-duration="1000" data-aos="flip-left">
                 <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
                     <h3 class="left">Python Expression Calculator</h3>
                     <p>A <code>tkinter</code> Calculator application which evaluates a mathematical expression and gives the user a result</p>
@@ -262,7 +263,50 @@
         <div id="shape"></div>
     </section>
 
+    <section id="about">
+        <div class="container">
+
+            <div class="row justify-content-center">
+                <div class="col-6 col-sm-5 col-md-4">
+                    <div id="display-picture"></div>
+                </div>
+                <div class="col-12 col-sm-7 col-md-8 h5 d-flex justify-content-around align-items-center flex-column p-5 text-center">
+                    <div><span class="font-weight-bold">Name: </span>Seif El-Din Wael Sweilam</div>
+                    <div>
+                        <span class="font-weight-bold">Age: </span>
+                        <script>
+                            let age = parseInt((Date.now() - new Date(2002, 6, 10)) / (1000 * 60 * 60 * 24 * 365));
+                            document.write(`${age} years`)
+                        </script>
+                    </div>
+                    <div><span class="font-weight-bold">Origin: </span>Egypt</div>
+                    <div><span class="font-weight-bold">Languages: </span>Arabic & English</div>
+                    <div><span class="font-weight-bold">Email: </span><a href="mailto:saifsweelam@gmail.com">saifsweelam@gmail.com</a></div>
+                </div>
+            </div>
+
+        </div>
+        <div id="bg-color"></div>
+    </section>
+
+    <section id="links" class="d-flex justify-content-around pt-5 pb-1">
+        <a target="_blank" href="https://github.com/saifsweelam/"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.behance.net/seifelsweilam"><i class="fab fa-behance-square"></i></a>
+        <a target="_blank" href="https://www.youtube.com/c/LogicCrackers"><i class="fab fa-youtube"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/seif-el-din-067ab918b/"><i class="fab fa-linkedin"></i></a>
+        <a target="_blank" href="https://www.facebook.com/seif.eldinwael.330/"><i class="fab fa-facebook-square"></i></a>
+        <a target="_blank" href="https://www.instagram.com/s_sweilam/"><i class="fab fa-instagram"></i></a>
+        <div id="gradient"></div>
+    </section>
+
     <div id="footage"></div>
+
+    <!--AOS-->
+    <link rel="stylesheet" href="CSS/aos.css">
+    <script src="JS/aos.js"></script>
+    <script>AOS.init();</script>
+
+
     <!--Custom scripts-->
     <script src="JS/navbar.js"></script>
     <script src="JS/certificates.js"></script>
