--- a/404.html
+++ b/404.html
@@ -35,9 +35,9 @@
 
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto text-center">
-                    <li class="nav-item w-100 active"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item w-100"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                    <li class="nav-item w-100"><a href="certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates</a></li>
+                    <li class="nav-item w-100"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
+                    <li class="nav-item w-100"><a href="index.html#about" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                    <li class="nav-item w-100"><a href="certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates<span class="sr-only">(current)</span></a></li>
                     <li class="nav-item w-100"><a href="portfolio.html" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
                     <li class="nav-item w-100"><a href="mailto:saifsweelam@gmail.com" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
                 </ul>
