--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A web developer experienced in Front-End and Back-End Web Developement. Hire Me NOW!!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#555555">
-    <title>Seif El-Din Sweilam</title>
+    <title>Seif El-Din Sweilam - Projects Portfolio</title>
 
     <!--Google Font "Cairo"-->
     <link rel="stylesheet" href="CSS/cairo.css">
@@ -45,7 +45,7 @@
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item w-100"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
-                    <li class="nav-item w-100"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                    <li class="nav-item w-100"><a href="index.html#about" class="nav-link text-uppercase font-weight-bold">About</a></li>
                     <li class="nav-item w-100"><a href="certificates.html" class="nav-link text-uppercase font-weight-bold">Certificates</a></li>
                     <li class="nav-item w-100 active"><a href="portfolio.html" class="nav-link text-uppercase font-weight-bold">Portfolio<span class="sr-only">(current)</span></a></li>
                     <li class="nav-item w-100"><a href="mailto:saifsweelam@gmail.com" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
@@ -68,10 +68,10 @@
         <h2 class="h1">My Projects</h2>
         <div class="mt-5">
             <div class="row mt-2 mb-2">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-3">
                     <div class="project-img" id="misk-img"></div>
                 </div>
-                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 mt-2 mb-2">
+                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
                     <h3 class="right">Misk</h3>
                     <p>A <code>node.js</code> web application for advertising perfumes using <code>MongoDB</code> database.</p>
                     <div>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="row mobile-reverse mt-2 mb-2">
-                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 mt-2 mb-2">
+                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
                     <h3 class="left">Get Your Identity</h3>
                     <p>You enter a name and wait for magic to happen. The website sends <code>AJAX</code> requests to multiple sites to get a fake identity for you.</p>
                     <div>
@@ -89,37 +89,38 @@
                         <a href="https://github.com/saifsweelam/get-your-identity" target="_blank" class="btn btn-warning">View Code</a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-3">
                     <div class="project-img" id="identity-img"></div>
                 </div>
             </div>
             <div class="row mt-2 mb-2">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-3">
                     <div class="project-img" id="protected-img"></div>
                 </div>
-                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 mt-2 mb-2">
+                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
                     <h3 class="right">Protected Image Downloader</h3>
                     <p>Download anyone's protected Facebook profile image with no pain. The web application uses <code>puppeteer</code> library and Facebook Graph API</p>
                     <div>
-                        <a href="https://protected-img-down.herokuapp.com/" class="btn btn-warning">View Website</a>
-                        <a href="https://github.com/saifsweelam/protected-image-downloader" class="btn btn-warning">View Code</a>
+                        <a href="https://protected-img-down.herokuapp.com/" class="btn btn-warning" target="_blank">View Website</a>
+                        <a href="https://github.com/saifsweelam/protected-image-downloader" class="btn btn-warning" target="_blank">View Code</a>
                     </div>
                 </div>
             </div>
             <div class="row mobile-reverse mt-2 mb-2">
-                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 mt-2 mb-2">
+                <div class="d-flex flex-column justify-content-center align-items-center col-md-8 col-sm-9 mt-2 mb-2">
                     <h3 class="left">Python Expression Calculator</h3>
                     <p>A <code>tkinter</code> Calculator application which evaluates a mathematical expression and gives the user a result</p>
                     <div>
-                        <a href="https://repl.it/@SeifElDinElDin1/FruitfulBowedInstitutes" class="btn btn-warning">Try Online</a>
-                        <a href="https://github.com/saifsweelam/Python-Expression-Calculator/blob/master/script.py" class="btn btn-warning">View Code</a>
+                        <a href="https://repl.it/@SeifElDinElDin1/FruitfulBowedInstitutes" class="btn btn-warning" target="_blank">Try Online</a>
+                        <a href="https://github.com/saifsweelam/Python-Expression-Calculator/blob/master/script.py" class="btn btn-warning" target="_blank">View Code</a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-3">
                     <div class="project-img" id="calc-img"></div>
                 </div>
             </div>
         </div>
+        <a href="portfolio.html" class="btn btn-secondary d-block w-100">View Full Portfolio</a>
     </section>
 
     <div id="footage"></div>
